fix: also add background color for preview-only examples
Page borders are crucial in some examples, but they are invisible without `@apply bg-gray-200 p-4`.

--- a/src/globals.css
+++ b/src/globals.css
@@ -93,8 +93,14 @@ samp {
 	@apply flex-1 m-0 rounded-none whitespace-pre overflow-x-auto lg:flex-[1_0_auto];
 }
 
-.previewed-code .preview {
-	@apply flex-1 flex-wrap bg-gray-200 flex items-center justify-center p-4 lg:min-w-1/2;
+.preview {
+	/* Preview-only examples are not wrapped in `.preview-code`, but they also need styles to make borders visible */
+	@apply bg-gray-200 p-4;
+
+	/* Side-by-side examples need additional styles for preview images. */
+	.previewed-code & {
+		@apply flex-1 flex-wrap flex items-center justify-center lg:min-w-1/2;
+	}
 }
 
 .previewed-code .preview img {
